@@ -24,8 +24,5 @@ my $subsubclass_meta = Moose->init_meta( for_class => 'SubSubClassUseBase' );
 ok does_role($subsubclass_meta, 'My::Role'),
     'SubSubClass metaclass does role from grandparent metaclass';
 my $subclass_meta = find_meta('SubClassUseBase');
-TODO: {
-    local $TODO = "In-between class' metaclass does not do My::Role";
-    ok does_role($subclass_meta, 'My::Role'),
-        'SubClass metaclass does role from parent metaclass';
-}
+ok does_role($subclass_meta, 'My::Role'),
+    'SubClass metaclass does role from parent metaclass';
